# mlops-first

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlops_first/: __init__.py  dataset.py  features.py  plots.py
mlops_first/app/: main.py
mlops_first/modeling/: predict.py  train.py
