[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_first"
version = "0.0.1"
description = "MLOps hello app"
authors = [{ name = "Demetrius Veras", email = "demetriushenry@gmail.com" }]

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mlops_first"]
force_sort_within_sections = true
